WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80065
Editor's default paragraph separator is not reset when a frame's document is changed
https://bugs.webkit.org/show_bug.cgi?id=80065
Summary
Editor's default paragraph separator is not reset when a frame's document is ...
Pablo Flouret
Reported
2012-03-01 16:10:24 PST
If a page somehow changes the value of Editor::m_shouldStyleWithCSS, Editor::m_defaultParagraphSeparator, etc. those values persist after the page is navigated away/refreshed/etc.
Attachments
Patch
(5.51 KB, patch)
2012-03-02 17:27 PST
,
Pablo Flouret
no flags
Details
Formatted Diff
Diff
Patch
(5.95 KB, patch)
2012-03-02 17:43 PST
,
Pablo Flouret
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-03-02 14:20:59 PST
Could you please prove a test case?
Pablo Flouret
Comment 2
2012-03-02 15:01:37 PST
(In reply to
comment #1
)
> Could you please prove a test case?
This came up from
https://bugs.webkit.org/show_bug.cgi?id=59961#c20
but i see now that i missed Editor::clear(), so i'll just reset the default paragraph separator there. Patch coming up.
Pablo Flouret
Comment 3
2012-03-02 17:27:58 PST
Created
attachment 129983
[details]
Patch
Ryosuke Niwa
Comment 4
2012-03-02 17:33:42 PST
Comment on
attachment 129983
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=129983&action=review
> LayoutTests/editing/resources/reset-default-values-helper.html:6 > + location.href = location.href + (location.search == "" ? "?" : "&") + "ohhai";
I don't think adding query string works on all ports. You should probably add one more file. By the way, this file should be in editing/execCommand/resources instead.
Pablo Flouret
Comment 5
2012-03-02 17:43:41 PST
Created
attachment 129984
[details]
Patch
WebKit Review Bot
Comment 6
2012-03-02 18:45:33 PST
Comment on
attachment 129984
[details]
Patch Rejecting
attachment 129984
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: _by_email return self._reviewer_only(self.account_by_email(email)) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/config/committers.py", line 632, in account_by_email return self._email_to_account_map().get(email.lower()) if email else None File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/config/committers.py", line 525, in _email_to_account_map assert(email not in self._accounts_by_email) # We should never have duplicate emails. AssertionError Full output:
http://queues.webkit.org/results/11795262
WebKit Review Bot
Comment 7
2012-03-02 21:49:10 PST
Comment on
attachment 129984
[details]
Patch Clearing flags on attachment: 129984 Committed
r109653
: <
http://trac.webkit.org/changeset/109653
>
WebKit Review Bot
Comment 8
2012-03-02 21:49:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug