Editor's default paragraph separator is not reset when a frame's document is changed https://bugs.webkit.org/show_bug.cgi?id=80065

Patch by Pablo Flouret <pablof@motorola.com> on 2012-03-02
Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: editing/execCommand/reset-values-after-navigation.html

* editing/Editor.cpp:
(WebCore::Editor::clear):

LayoutTests:

* editing/execCommand/default-paragraph-separator.html: Last line of the test did a manual reset of the value to work around this problem. Removed.
* editing/execCommand/reset-values-after-navigation-expected.txt: Added.
* editing/execCommand/reset-values-after-navigation.html: Added.
* editing/execCommand/resources/reset-default-values-helper-1.html: Added.
* editing/execCommand/resources/reset-default-values-helper-2.html: Added.

Canonical link: https://commits.webkit.org/97323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109653 268f45cc-cd09-0410-ab3c-d52691b4dbfc